--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -1,6 +1,6 @@
 .wd-white-and-gray {
     background-color: darkgray;
-    color: rgb(110, 118, 125);
+    color: white;
 }
 .wd-black-and-gray {
     background-color: black;
