--- a/public/tuiter/styles.css
+++ b/public/tuiter/styles.css
@@ -4,13 +4,21 @@
     padding-top: 5px;
     alignment: center;
 }
-.wd-ver-container{
+.wd-vera-container{
     display: flex;
     flex-direction: column;
+    border-left: 1px solid lightgray;
+    border-right: 1px solid lightgray;
+    margin-left: 6px;
+    margin-right: 6px;
 }
 .wd-last-container {
     padding-left: 12px;
     display: flex;
     justify-content: space-between;
     padding-right: 100px;
+}
+.wd-ver-container{
+    display: flex;
+    flex-direction: column;
 }
