--- a/public/labs/a3/index.css
+++ b/public/labs/a3/index.css
@@ -2,6 +2,10 @@
     background-color: blue;
     color: white;
 } */
+p#id-try{
+    background-color: blue;
+    color: white;
+}
 p#id-selector-1 {
     background-color: red;
     color: white;
