--- a/public/tuiter/bookmarks/index.css
+++ b/public/tuiter/bookmarks/index.css
@@ -152,3 +152,19 @@
 .wd-link{
     text-decoration: none;
 }
+.wd-icon {
+    position: absolute;
+    right: 12px;
+    top: 25px;
+    padding-right: 35px;
+    height: 10px;
+    width: 10px;
+}
+.wd-icon-gray {
+    position: absolute;
+    right: 12px;
+    top: 80px;
+    padding-right: 29px;
+    height: 10px;
+    width: 10px;
+}
